@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.4.0 wip
 ----------------------------
+[enh] added `destroy` method, see #61 (vitalets) 
 [enh] textarea: added `rows` property (vitalets) 
 [enh #60] added wysihtml5 input (vitalets) 
 [enh] added IOS-style clear button for text inputs (vitalets) 
